// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentCardGroup renders correctly with a children 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_parent"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            />
          </div>
          <div>
            test
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-8db7ky-sizeStyles e1gt4cfo0"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with description 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1nqw819 {
  color: #3f4250;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
          <p
            class="css-1nqw819 e13y3mga0"
          >
            description
          </p>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-8db7ky-sizeStyles e1gt4cfo0"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with link target _parent 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_parent"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-8db7ky-sizeStyles e1gt4cfo0"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with loading prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-1d4gwso-StyledWrapper {
  padding: 24px;
}

.css-1d4gwso-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-1ddph7r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-158ltsb {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
}

.css-1ccwz2y {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.css-171fx8 {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-171fx8 {
    -webkit-animation: unset;
    animation: unset;
  }
}

.css-1pcpyjh-StyledSquareSkeleton {
  position: relative;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: column;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  height: 100%;
  height: 32px;
  width: 32px;
  border-radius: 4px;
}

.css-1lyaq9u {
  height: 100%;
  width: 100%;
  max-width: 100%;
  background-color: #e9eaeb;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <div
      class="css-1d4gwso-StyledWrapper e1xovou51"
    >
      <div
        class="css-1ddph7r ehpbis70"
      >
        <div
          class="css-1t7ypwa ehpbis70"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="css-158ltsb e183x2r81"
          >
            <div
              class="css-1ccwz2y e1denkbe0"
            />
            <div
              class="css-171fx8 e183x2r80"
            />
          </div>
        </div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="e1xovou50 css-1pcpyjh-StyledSquareSkeleton e183x2r81"
        >
          <div
            class="css-1lyaq9u e1uz28830"
          />
          <div
            class="css-171fx8 e183x2r80"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with required title & hread 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-8db7ky-sizeStyles e1gt4cfo0"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ContentCardGroup renders correctly with subtitle 1`] = `
<DocumentFragment>
  .css-rc1vo0-StyledWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-radius: 4px;
  border: 1px solid #d9dadd;
  background: #ffffff;
  min-width: 0;
}

.css-xlsc0t-StyledWrapper {
  padding: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.css-xlsc0t-StyledWrapper:not(:first-child) {
  border-top: 1px solid #d9dadd;
}

.css-xlsc0t-StyledWrapper:first-child {
  border-radius: 4px 4px 0 0;
}

.css-xlsc0t-StyledWrapper:last-child {
  border-radius: 0 0 4px 4px;
}

.css-xlsc0t-StyledWrapper .eqcw8nr2 {
  background: #f9f9fa;
}

.css-xlsc0t-StyledWrapper:hover {
  background: #e9eaeb;
}

.css-xlsc0t-StyledWrapper:hover .eqcw8nr2 {
  background: none;
}

.css-17tit68-FullHeightStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
}

.css-1rd9aap-StyledStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 0;
}

.css-zitw5 {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1j4n8wo {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.css-1vvrw62-IconWrapper {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.css-8db7ky-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-8db7ky-sizeStyles .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    class="css-rc1vo0-StyledWrapper e1393dgx0"
  >
    <a
      class="css-xlsc0t-StyledWrapper eqcw8nr1"
      href="http://scaleway.com"
      target="_blank"
    >
      <div
        class="css-17tit68-FullHeightStack eqcw8nr0"
      >
        <div
          class="css-1rd9aap-StyledStack eqcw8nr3"
        >
          <div>
            <h5
              class="css-zitw5 e13y3mga0"
            >
              subtitle
            </h5>
            <h3
              class="css-1j4n8wo e13y3mga0"
            >
              title
            </h3>
          </div>
        </div>
        <div
          class="css-1vvrw62-IconWrapper eqcw8nr2"
        >
          <svg
            class="css-8db7ky-sizeStyles e1gt4cfo0"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M4.25 6.5C3.83579 6.5 3.5 6.83579 3.5 7.25V15.75C3.5 16.1642 3.83579 16.5 4.25 16.5H12.75C13.1642 16.5 13.5 16.1642 13.5 15.75V11.75C13.5 11.3358 13.8358 11 14.25 11C14.6642 11 15 11.3358 15 11.75V15.75C15 16.9926 13.9926 18 12.75 18H4.25C3.00736 18 2 16.9926 2 15.75V7.25C2 6.00736 3.00736 5 4.25 5H9.25C9.66421 5 10 5.33579 10 5.75C10 6.16421 9.66421 6.5 9.25 6.5H4.25Z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M6.19385 13.7532C6.47175 14.0603 6.94603 14.0841 7.25319 13.8062L16.5 5.43999V8.25C16.5 8.66421 16.8358 9 17.25 9C17.6642 9 18 8.66421 18 8.25V3.75C18 3.33579 17.6642 3 17.25 3H12.75C12.3358 3 12 3.33579 12 3.75C12 4.16421 12.3358 4.5 12.75 4.5H15.3032L6.24682 12.6938C5.93966 12.9717 5.91595 13.446 6.19385 13.7532Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
